---------------------------------------------------------------------------------------------------
Version: 0.69.43
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.42
Date: 2025-05-29
  Changes:
    - Further optimization to trashsteroid rendering. Lower Rubia time usage.
    - Added a setting to invert how trashsteroids become bigger/smaller as they approach the surface.
---------------------------------------------------------------------------------------------------
Version: 0.69.41
Date: 2025-05-29
  Changes:
    - Sniper turret technology icon size did not match. Some users could not load the game.
---------------------------------------------------------------------------------------------------
Version: 0.69.40
Date: 2025-05-28
  Changes:
    - Garbo grabber recipe description updated.
    - Fixed issue of craptonite frames not being exportable from Rubia: RocketCargoInsertion is now a required dependency. This adds a machine called the "Rocketizer" that allows rocket parts to be added to it to put rocket parts into a silo's cargo. Support was added to merge.
    - Rocketizer is now immune to trashsteroids, but only if made with craptonite in non-backwards-compatible mode.
    - Added warning about new rocketizer settings if you already have a rocketizer in your base upon installing Rubia.
    - Distant Misfires marked as an incompatibility, until I can find a way to make it not cause the mod to be impossible, lol.
---------------------------------------------------------------------------------------------------
Version: 0.69.39
Date: 2025-05-27
  Balancing:
    - Scrap patch richness x3
    - Biofusion science packs can now be exported from Rubia.
    - Biorecycling science pack rocket capacity 1000 => 2000
    - Armored trains no longer go zoom in reverse lol.
    - Spidertron remnants now give 0-4 => 3-7 steel, red circuits 0.25%=>0.3 and 8-12 => 8-15